@@ -141,6 +141,7 @@ class builder jc name jsig = object(self)
 	val mutable stack_frames = []
 	val mutable exceptions = []
 	val mutable argument_locals = []
+	val mutable argument_annotations = Hashtbl.create 0
 	val mutable thrown_exceptions = Hashtbl.create 0
 	val mutable closure_count = 0
 	val mutable regex_count = 0
@@ -1002,6 +1003,10 @@ class builder jc name jsig = object(self)
 	method replace_top jsig =
 		code#get_stack#replace jsig
 
+	method add_argument_annotation (slot : int) (a : (path * annotation) list) =
+		let a = Array.of_list (List.map (fun (path,annot) -> TObject(path,[]),annot) a) in
+		Hashtbl.add argument_annotations slot a
+
 	(** This function has to be called once all arguments are declared. *)
 	method finalize_arguments =
 		argument_locals <- locals
@@ -1123,6 +1128,18 @@ class builder jc name jsig = object(self)
 		end;
 		if Hashtbl.length thrown_exceptions > 0 then
 			self#add_attribute (AttributeExceptions (Array.of_list (Hashtbl.fold (fun k _ c -> k :: c) thrown_exceptions [])));
+		if Hashtbl.length argument_annotations > 0 then begin
+			let l = List.length argument_locals in
+			let offset = if self#has_method_flag MStatic then 0 else 1 in
+			let a = Array.init (l - offset) (fun i ->
+				try
+					let annot = Hashtbl.find argument_annotations (i + offset) in
+					convert_annotations jc#get_pool annot
+				with Not_found ->
+					[||]
+			) in
+			DynArray.add attributes (AttributeRuntimeVisibleParameterAnnotations a)
+		end;
 		let attributes = self#export_attributes jc#get_pool in
 		let offset_name = jc#get_pool#add_string name in
 		let jsig = generate_method_signature false jsig in
