@@ -8,6 +8,7 @@
 
 	all : improved error messages upon directory creation failures (#10361)
 	eval : added `%` operator to `eval.numbers.Int64` and `eval.numbers.UInt64` (#10411)
+	jvm : generate native annotations for function arguments (#10397)
 
 	Bugfixes:
 
